--- a/_posts/2014-09-01-legacy02.md
+++ b/_posts/2014-09-01-legacy02.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Simple ways of speeding up Python cod
+title:      Simple ways of speeding up Python code
 date:       2013-02-07
 summary:    Python shines as an easy-to-learn language since the syntax is readable and getting things done is straightforward. You don't have to worry about heavy baggage that are attached with Java, C and similar compiled languages. But, there downsides as well. Python's primary downside is the speed. Even with help from packages like NumPy, there may be a bottleneck. Here, I'll go over a few simple tips to speeding up your code.
 ---
