Removed erroneous text

--- a/_posts/2014-09-01-legacy02.md
+++ b/_posts/2014-09-01-legacy02.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Simple ways of speeding up Python code
+title:      Simple ways of speeding up Python cod
 date:       2013-02-07
 summary:    Python shines as an easy-to-learn language since the syntax is readable and getting things done is straightforward. You don't have to worry about heavy baggage that are attached with Java, C and similar compiled languages. But, there downsides as well. Python's primary downside is the speed. Even with help from packages like NumPy, there may be a bottleneck. Here, I'll go over a few simple tips to speeding up your code.
 ---
@@ -65,4 +65,4 @@ This type of slicing and indexing to modify arrays can work on whatever array st
 As a quick side note: Using the `np.where` function is another way of doing the examples above, but in most cases it will be a bit slower.
 
 ##Summary##
-If you apply the methods we covered above in your code you will get a significant speed up. Not all the problems you will run into are going to be plug-and-play, so you will have to creative at times. If anyone has comments or suggestions on other simple speed ups let us know through the comments :-).  
+If you apply the methods we covered above in your code you will get a significant speed up. Not all the problems you will run into are going to be plug-and-play, so you will have to creative at times.
