--- a/_posts/2014-09-01-legacy02.md
+++ b/_posts/2014-09-01-legacy02.md
@@ -65,4 +65,4 @@ This type of slicing and indexing to modify arrays can work on whatever array st
 As a quick side note: Using the `np.where` function is another way of doing the examples above, but in most cases it will be a bit slower.
 
 ##Summary##
-If you apply the methods we covered above in your code you will get a significant speed up. Not all the problems you will run into are going to be plug-and-play, so you will have to creative at times.
+If you apply the methods we covered above in your code you will get a significant speed up. Not all the problems you will run into are going to be plug-and-play, so you will have to be creative at times.
