Small edit on text

--- a/_posts/2014-09-01-legacy03.md
+++ b/_posts/2014-09-01-legacy03.md
@@ -2,6 +2,7 @@
 layout:     post
 title:      Visualizing 3D data in yt
 date:       2013-02-17
+summary:    In astronomy observational data comes in many flavors. Ranging from X-ray to radio wavelengths, data can be captured in either 2D images or higher dimension data cubes and it can be hard to visualize. Yt makes it easy and stunning.
 ---
 
 In astronomy observational data comes in many flavors. Ranging from X-ray to radio wavelengths, data can be captured in either 2D images or higher dimension data cubes. For the Chandra X-ray telescope, the data can be observed in 4D space: x, y, energy, and time. For radio data you can get velocity x, y, and velocity (line-of-sight). In fact, that is just scratching the surface. There's a lot more information that can be gleaned from these datasets, but for now we will stick with that.
