Change to title

--- a/_posts/2014-09-01-legacy07.md
+++ b/_posts/2014-09-01-legacy07.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Writing papers with Authorea - batteries included
+title:      Writing papers with Authorea, batteries included
 date:       2013-03-07
 summary:    In the summer of 2012 I was at the the fourth .Astronomy meeting in Heidelberg, Germany. It's a meeting where some of the most exciting and cutting-edge ideas about astronomy and the web are discussed. It's a bit like TED, but more informal where think tanking is done through unconference sessions. In between the crazy schedule, I had time to chat with Alberto Pepe, a post-doc working at Harvard. He had something to show me.
 ---
